@@ -33,7 +33,7 @@ public enum EntryParam
     provides, 
     properties, 
     composition, 
-    service, 
+    service,
     filter, 
     defaultImpl, 
     required, 
@@ -42,8 +42,10 @@ public enum EntryParam
     removed,
     swap,
     autoConfig, 
-    pid, 
+    pid,
+    pidClass,
     factoryPid,
+    factoryPidClass,
     propagate, 
     updated, 
     timeout,
